# employee-control

./: .editorconfig  .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_checkin_lifecycle_grants.py  0003_platform_metering.py  0004_credentials.py
backend/app/: celery_app.py  cli.py  config.py  db.py  geo.py  main.py  redis.py  storage.py  utils.py
backend/app/models/: __init__.py  audit.py  base.py  checkins.py  credentials.py  org.py  platform.py  sites.py  tenancy.py  tracking.py
backend/app/modules/assignments/: router.py
backend/app/modules/auth/: login.py  passwords.py  router.py  security.py  service.py
backend/app/modules/checkins/: router.py  schemas.py  service.py  signing.py
backend/app/modules/face/: embedder.py  router.py  service.py
backend/app/modules/history/: router.py
backend/app/modules/org/: departments.py  ltree.py  users.py
backend/app/modules/platform/: router.py  service.py
backend/app/modules/rbac/: deps.py
backend/app/modules/reports/: router.py
backend/app/modules/shifts/: router.py
backend/app/modules/sites/: router.py
backend/app/modules/tenancy/: service.py  status.py
backend/app/modules/tracking/: keys.py  presence.py  router.py  (+3 more)
backend/scripts/: full_smoke.py  org_smoke.py  ws_smoke.py
backend/tests/: conftest.py  test_assignments.py  test_auth_flow.py  test_checkins.py  test_face.py  test_login.py  test_org.py  test_platform.py  test_reports.py  test_storage.py  test_tenant_isolation.py  test_tracking.py
(+80 files in other folders)
